--- a/My Python Stuff/Practice.ipynb
+++ b/My Python Stuff/Practice.ipynb
@@ -2795,12 +2795,411 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It was true!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if True:\n",
+    "    print('It was true!')     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I will be printed in any case where x is not true\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = False\n",
+    "\n",
+    "if x:\n",
+    "    print('x was True!')\n",
+    "else:\n",
+    "    print('I will be printed in any case where x is not true')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the bank!\n"
+     ]
+    }
+   ],
+   "source": [
+    "loc = 'Bank'\n",
+    "\n",
+    "if loc == 'Auto Shop':\n",
+    "    print('Welcome to the Auto Shop!')\n",
+    "elif loc == 'Bank':\n",
+    "    print('Welcome to the bank!')\n",
+    "else:\n",
+    "    print('Where are you?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome Sammy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "person = 'Sammy'\n",
+    "\n",
+    "if person == 'Sammy':\n",
+    "    print('Welcome Sammy!')\n",
+    "else:\n",
+    "    print(\"Welcome, what's your name?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome George!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "person = 'George'\n",
+    "\n",
+    "if person == 'Sammy':\n",
+    "    print('Welcome Sammy!')\n",
+    "elif person =='George':\n",
+    "    print('Welcome George!')\n",
+    "else:\n",
+    "    print(\"Welcome, what's your name?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'---------------------------------------------'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'---------------------------------------------'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'LOOPS'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'LOOPS'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'----------------------------------------------'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'----------------------------------------------'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "     "
+    "list1 = [1,2,3,4,5,6,7,8,9,10]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in list1:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "17 % 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 % 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for num in list1:\n",
+    "    if num % 2 == 0:\n",
+    "        print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Odd number\n",
+      "2\n",
+      "Odd number\n",
+      "4\n",
+      "Odd number\n",
+      "6\n",
+      "Odd number\n",
+      "8\n",
+      "Odd number\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in list1:\n",
+    "    if num % 2 == 0:\n",
+    "        print(num)\n",
+    "    else:\n",
+    "        print('Odd number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-19-835f654892aa>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-19-835f654892aa>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    print('Odd number = 'num)\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in list1:\n",
+    "    if num % 2 == 0:\n",
+    "        print(num)\n",
+    "    else:\n",
+    "        print('Odd number = 'num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Odd number\n",
+      "1\n",
+      "2\n",
+      "Odd number\n",
+      "3\n",
+      "4\n",
+      "Odd number\n",
+      "5\n",
+      "6\n",
+      "Odd number\n",
+      "7\n",
+      "8\n",
+      "Odd number\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in list1:\n",
+    "    if num % 2 == 0:\n",
+    "        print(num)\n",
+    "    else:\n",
+    "        print('Odd number')\n",
+    "        print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_sum = 0 \n",
+    "\n",
+    "for num in list1:\n",
+    "    list_sum = list_sum + num\n",
+    "\n",
+    "print(list_sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
